--- a/compose.yml
+++ b/compose.yml
@@ -6,6 +6,6 @@ services:
       - 127.0.0.1:1433:1433
   minitwit-service:
     container_name: minitwit-container
-    image: ghcr.io/devops-groupf/itu-minitwit-devops:main
+    image: ghcr.io/devops-groupf/itu-minitwit-devops:latest
     ports:
       - 8080:8080
