add prometherus and grafana to compose

--- a/compose.yml
+++ b/compose.yml
@@ -1,3 +1,8 @@
+networks:
+  itu-minitwit-network:
+    external: false
+    name: itu-minitwit-network
+
 services:
   minitwit-service:
     container_name: minitwit-container
@@ -8,6 +13,26 @@ services:
       - db_secret
     ports:
       - 8080:8080
+    depends_on:
+      - grafana
+      - prometheus
+
+  prometheus:
+    image: prom/prometheus
+    container_name: prometheus
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    ports:
+      - "9090:9090"
+    networks:
+      - itu-minitwit-network
+
+  grafana:
+    image: grafana/grafana:10.2.4
+    ports:
+      - "3000:3000"
+    networks:
+      - itu-minitwit-network
 
 secrets:
   db_secret:
