Add minitwit-service to the minitwit network

--- a/compose.yml
+++ b/compose.yml
@@ -16,6 +16,8 @@ services:
     depends_on:
       - grafana
       - prometheus
+    networks:
+      - itu-minitwit-network
 
   prometheus:
     image: prom/prometheus
