--- a/compose.yml
+++ b/compose.yml
@@ -24,8 +24,6 @@ services:
     container_name: prometheus
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
-    ports:
-      - "9090:9090"
     networks:
       - itu-minitwit-network
 
@@ -35,6 +33,8 @@ services:
       - "3000:3000"
     networks:
       - itu-minitwit-network
+    secrets:
+      - grafana_secret
     environment:
       - GF_SECURITY_ADMIN_PASSWORD__FILE=/run/secrets/grafana_secret
 
