--- a/prometheus.yml
+++ b/prometheus.yml
@@ -24,6 +24,6 @@ scrape_configs:
     scrape_interval: 5s
 
     static_configs:
-      - targets: ['minitwit-service:8080']
+      - targets: ['minitwit-container:8080']
         labels:
           group: 'production'
