--- a/compose.yml
+++ b/compose.yml
@@ -35,8 +35,8 @@ services:
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASS}
     volumes:
-      - ./grafana_dashboard_setup.yaml:/etc/grafana/provisioning/dashboards/grafana_dashboard_setup.yaml
-      - ./prometheus_dashboards.json:/var/lib/grafana/dashboards/prometheus_dashboards.json
-      - ./prometheus_datasource.yaml:/etc/grafana/provisioning/datasources/prometheus_datasource.yaml
-
+      - ./configuration_files/grafana_dashboard_setup.yaml:/etc/grafana/provisioning/dashboards/grafana_dashboard_setup.yaml
+      - ./configuration_files/grafana_dashboard_0.json:/var/lib/grafana/dashboards/grafana_dashboard_0.json
+      - ./configuration_files/grafana_dashboard_1.json:/var/lib/grafana/dashboards/grafana_dashboard_1.json
+      - ./configuration_files/prometheus_datasource.yaml:/etc/grafana/provisioning/datasources/prometheus_datasource.yaml
 
