Add correct config url as secret

--- a/configuration_files/prometheus_datasource.yaml
+++ b/configuration_files/prometheus_datasource.yaml
@@ -63,7 +63,7 @@ datasources:
     access: proxy
     orgId: 1
     uid: minitwit-database
-    url: minitwit-database:1433
+    url: ${DB_CONN_URL}
     user: sa
     database:
       master
