--- a/compose.yml
+++ b/compose.yml
@@ -34,6 +34,9 @@ services:
       - itu-minitwit-network
     environment:
       - GF_SECURITY_ADMIN_PASSWORD=${GRAFANA_PASS}
+      - DB_CONN_URL=${DB_CONN_URL}
+      - DB_CONN_USER=${DB_CONN_USER}
+      - DB_CONN_PASSWORD=${DB_CONN_PASSWORD}
     volumes:
       - ./configuration_files/grafana_dashboard_setup.yaml:/etc/grafana/provisioning/dashboards/grafana_dashboard_setup.yaml
       - ./configuration_files/grafana_dashboard_0.json:/var/lib/grafana/dashboards/grafana_dashboard_0.json
