--- a/configuration_files/prometheus_datasource.yaml
+++ b/configuration_files/prometheus_datasource.yaml
@@ -1,11 +1,3 @@
-# apiVersion: 1
-# datasources:
-#   - name: Prometheus
-#     type: prometheus
-#     access: proxy
-#     url: http://prometheus:9090
-#     basicAuth: false
-
 # Configuration file version
 apiVersion: 1
 
@@ -58,24 +50,36 @@ datasources:
     # Grafana UI.
     editable: true
 
-  - name: Minitwit-database
-    type: mssql
-    access: proxy
-    orgId: 1
+# Old mssql connection, remove later
+  # - name: Minitwit-database
+  #     type: mssql
+  #     access: proxy
+  #     orgId: 1
+  #     uid: minitwit-database
+  #     url: ${DB_CONN_URL}
+  #     user: ${DB_CONN_USER}
+  #     database:
+  #       minitwit-db
+  #     basicAuth:
+  #       false
+  #     basicAuthUser:
+  #       ${DB_CONN_USER}
+  #     withCredentials:
+  #     isDefault:
+  #       false
+  #     jsonData:
+  #     secureJsonData:
+  #       password: ${DB_CONN_PASSWORD}
+  #     version: 1
+  #     editable: true
+
+  - name: PostgreSQL
+    type: postgresql
     uid: minitwit-database
+    access: proxy
     url: ${DB_CONN_URL}
+    database: defaultdb
     user: ${DB_CONN_USER}
-    database:
-      minitwit-db
-    basicAuth:
-      false
-    basicAuthUser:
-      ${DB_CONN_USER}
-    withCredentials:
-    isDefault:
-      false
-    jsonData:
     secureJsonData:
       password: ${DB_CONN_PASSWORD}
-    version: 1
     editable: true
