--- a/configuration_files/prometheus_datasource.yaml
+++ b/configuration_files/prometheus_datasource.yaml
@@ -74,7 +74,7 @@ datasources:
   #     editable: true
 
   - name: PostgreSQL
-    type: postgresql
+    type: PostgreSQL
     uid: minitwit-database
     access: proxy
     url: ${DB_CONN_URL}
