--- a/configuration_files/prometheus_datasource.yaml
+++ b/configuration_files/prometheus_datasource.yaml
@@ -73,13 +73,20 @@ datasources:
   #     version: 1
   #     editable: true
 
-  - name: PostgreSQL
-    type: PostgreSQL
-    uid: minitwit-database
-    access: proxy
+  - name: minitwit-postgres
+    type: postgres
+    uid: minitwit-postgres
     url: ${DB_CONN_URL}
-    database: defaultdb
+    orgId: 1
     user: ${DB_CONN_USER}
     secureJsonData:
       password: ${DB_CONN_PASSWORD}
-    editable: true
+    jsonData:
+      database: postgres
+      sslmode: 'disable' # disable/require/verify-ca/verify-full
+      maxOpenConns: 100 # Grafana v5.4+
+      maxIdleConns: 100 # Grafana v5.4+
+      maxIdleConnsAuto: true # Grafana v9.5.1+
+      connMaxLifetime: 14400 # Grafana v5.4+
+      #postgresVersion: 903 # 903=9.3, 904=9.4, 905=9.5, 906=9.6, 1000=10
+      timescaledb: false
