--- a/compose.yml
+++ b/compose.yml
@@ -73,7 +73,7 @@ services:
   
   fluentd:
     image: fluent/fluentd:v1.12-debian
-    container_name: fluentd
+    container_name: fluentd-container
     volumes:
       - ./configuration_files/fluent.conf:/fluentd/etc/fluent.conf
       - /var/log/fluentd:/fluentd/log
