--- a/compose.yml
+++ b/compose.yml
@@ -57,10 +57,18 @@ services:
       - DB_CONN_PASSWORD=${DB_CONN_PASSWORD}
     volumes:
       - grafana_data:/var/lib/grafana
-      - ./configuration_files/grafana_dashboard_setup.yaml:/etc/grafana/provisioning/dashboards/grafana_dashboard_setup.yaml
-      - ./configuration_files/grafana_dashboard_0.json:/var/lib/grafana/dashboards/grafana_dashboard_0.json
-      - ./configuration_files/grafana_dashboard_1.json:/var/lib/grafana/dashboards/grafana_dashboard_1.json
-      - ./configuration_files/prometheus_datasource.yaml:/etc/grafana/provisioning/datasources/prometheus_datasource.yaml
+      - type: bind
+        source: ./configuration_files/grafana_dashboard_setup.yaml
+        target: /etc/grafana/provisioning/dashboards/grafana_dashboard_setup.yaml
+      - type: bind
+        source: ./configuration_files/grafana_dashboard_0.json
+        target: /var/lib/grafana/dashboards/grafana_dashboard_0.json
+      - type: bind
+        source: ./configuration_files/grafana_dashboard_1.json
+        target: /var/lib/grafana/dashboards/grafana_dashboard_1.json
+      - type: bind
+        source: ./configuration_files/prometheus_datasource.yaml
+        target: /etc/grafana/provisioning/datasources/prometheus_datasource.yaml
     depends_on:
       - fluentd
     logging:
