--- a/compose.yml
+++ b/compose.yml
@@ -33,7 +33,7 @@ services:
         parallelism: 1
       placement:
         constraints:
-          - "node.role==worker"
+          - node.role == worker
 
   prometheus:
     image: prom/prometheus:v2.51.0-rc.0
