--- a/configuration_files/prometheus_datasource.yaml
+++ b/configuration_files/prometheus_datasource.yaml
@@ -82,7 +82,7 @@ datasources:
     secureJsonData:
       password: ${DB_CONN_PASSWORD}
     jsonData:
-      database: postgres
+      database: defaultdb
       sslmode: 'disable' # disable/require/verify-ca/verify-full
       maxOpenConns: 100 # Grafana v5.4+
       maxIdleConns: 100 # Grafana v5.4+
