--- a/configuration_files/prometheus.yml
+++ b/configuration_files/prometheus.yml
@@ -24,6 +24,6 @@ scrape_configs:
     scrape_interval: 5s
 
     static_configs:
-      - targets: ['minitwit-container:8080']
+      - targets: ['twit-swarm-test-8-worker-0:8080', 'twit-swarm-test-8-worker-1:8080', 'twit-swarm-test-8-worker-2:8080']
         labels:
           group: 'production'
