--- a/compose.yml
+++ b/compose.yml
@@ -38,6 +38,8 @@ services:
   prometheus:
     image: prom/prometheus:v2.51.0-rc.0
     container_name: prometheus-container
+    ports:
+      - 9090:9090
     volumes:
       - prometheus_data:/prometheus
       - ./configuration_files/prometheus.yml:/etc/prometheus/prometheus.yml
