--- a/configuration_files/prometheus.yml
+++ b/configuration_files/prometheus.yml
@@ -6,8 +6,8 @@ global:
   external_labels:
     monitor: 'codelab-monitor'
 
-rule_files:
-  - 'prometheus.rules.yml'
+#rule_files:
+#  - 'prometheus.rules.yml'
 
 scrape_configs:
   - job_name: 'prometheus'
