--- a/compose.yml
+++ b/compose.yml
@@ -107,7 +107,7 @@ services:
     container_name: fluentd-container
     volumes:
       - ./configuration_files/fluent.conf:/fluentd/etc/fluent.conf
-      - /var/log/fluentd:/fluentd/log
+      - fluentd_data:/fluentd/log
     ports:
       - "24224:24224"
       - "24224:24224/udp"
@@ -123,3 +123,4 @@ services:
 volumes:
   grafana_data:
   prometheus_data:
+  fluentd_data:
